--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <footer>
-        <p>Connect with Us:</p>
+        <p>Connect with Developer :</p>
         <a href="https://github.com/Vvslaxman" target="_blank">@Vvslaxman</a>
-        <a href="https://github.com/Pranaytelagathoti" target="_blank">@T.Pranay</a>
     </footer>
 </body>
 </html>
